--- a/aristote.html
+++ b/aristote.html
@@ -68,7 +68,12 @@
                             <!-- Hero Caption -->
                             <div class="hero__caption d-flex justify-content-around d-flex flex-column flex-xl-row align-items-center">
                                 <img src="./assets/img/aristote.png" alt="" class="img shadow mb-5 mb-xl-0">
-                                <p class="text-justify mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam velit aspernatur perferendis rerum eos ex magni tenetur ea optio, maiores soluta harum perspiciatis officia ducimus at numquam distinctio, eligendi eveniet.</p>
+                                <p class="text-justify mt-5">Sa biographie:</br>
+                                    -Nom Complet : Aristotle </br>
+                                    -Naissance et mort : 384 av JC à Stagire,Grèce et 322 av JC Chalcis , Grèce</br>
+                                    -Formation: Académie de Platon en 368 av JC à 348 av JC</br>
+                                -Ses plus grandes oeuvres: La Métaphysique; L’Éthique à Nicomaque; La poétique; La physique; De l’Ame</br>
+                                </p>
                             </div>
                         </div>
                     </div>
