--- a/comparaison.html
+++ b/comparaison.html
@@ -69,7 +69,7 @@
                         <div class="col-12">
                             <!-- Hero Caption -->
                             <div class="hero__caption d-flex justify-content-around d-flex flex-column flex-xl-row align-items-center">
-                                <p class="text-justify">Lorem  ipsum dolor sit amet, consectetur adipisicing elit. Totam velit aspernatur perferendis rerum eos ex magni tenetur ea optio, maiores soluta harum perspiciatis officia ducimus at numquam distinctio, eligendi eveniet.</p>
+                                <p class="text-justify">On peut voir que St Thomas D'Aquin et Aristote sont dans la même vision des choses car ils sont tout les deux d'accord que la Monarchie est un regime politique qui peut plaire car il profite a tout le monde et cela apporte que du bien pour une population.</p>
                             </div>
                         </div>
                     </div>
