--- a/st-thomas.html
+++ b/st-thomas.html
@@ -68,7 +68,12 @@
                             <!-- Hero Caption -->
                             <div class="hero__caption d-flex justify-content-around d-flex flex-column flex-xl-row align-items-center">
                                 <img src="./assets/img/St_Thomas.jpg" alt="" class="img shadow mb-5 mb-xl-0">
-                                <p class="text-justify mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam velit aspernatur perferendis rerum eos ex magni tenetur ea optio, maiores soluta harum perspiciatis officia ducimus at numquam distinctio, eligendi eveniet.</p>
+                                <p class="text-justify mt-5">Sa biographie:</br>
+                                    -Nom Complet : St Thomas d’Aquin</br>
+                                    -Naissance et mort : 28 janvier 1225 , Royaume de Sicile et 7 mars 1274</br>
+                                -Formation/Ecole: Université de Naples - Frédéric-II (1239-1245)  Ancienne université de Paris (1245-1248)</br>
+                                -Sa plus grande oeuvre: La Somme de théologie</br>
+                            </p>
                             </div>
                         </div>
                     </div>
