--- a/aristote.html
+++ b/aristote.html
@@ -66,7 +66,7 @@
                     <div class="justify-content-center">
                         <div class="col-12">
                             <!-- Hero Caption -->
-                            <div class="hero__caption d-flex justify-content-around d-flex flex-column flex-xl-row align-items-center">
+                            <div class="hero__caption d-flex justify-content-around d-flex flex-column flex-lg-row align-items-center">
                                 <img src="./assets/img/aristote.png" alt="" class="img shadow mb-5 mb-xl-0">
                                 <p class="text-justify mt-5">Sa biographie:</br>
                                     -Nom Complet : Aristotle </br>
